create intent to pass user input from MainActivity to RecipesActivity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">RecipeFinder</string>
+    <string name="enter_hint">Enter an ingredient</string>
 </resources>
