--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">RecipeFinder</string>
     <string name="enter_hint">Enter an ingredient</string>
+    <string name="recipe_results">With %1$s and %2$s you can make:</string>
 </resources>
